tests/paczka1/fuzzy1/10684977.err
Error in line 8: yjq A168 99,4
Error in line 12: yjq A396 20,2
Error in line 13: yjq A203 51,8
Error in line 18: hrM1oG5gVaC S863 61,3
